2002-12-28  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/using-tools.doc: explain side-effects of -ffreestanding.

2002-12-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/stdio.h: include declarations for basic
		input functions.
	* libc/stdio/Makefile.am: include the new files below.
	* libc/stdio/stdio_private.h: activate the __SERR flag.
	* libc/stdio/clearerr.c: New file.
	* libc/stdio/feof.c: New file.
	* libc/stdio/ferror.c: New file.
	* libc/stdio/fgetc.c: New file.
	* libc/stdio/fgets.c: New file.
	* libc/stdio/getc.S: New file.
	* libc/stdio/getchar.c: New file.
	* libc/stdio/gets.c: New file.

2002-12-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libc/stdio/fdevopen.c: don't clobber flags when
		opening a stream for reading and writing.
	* libc/stdio/fputc.c: check __SWR before writing.
	* libc/stdio/fputs.c: check __SWR before writing,
		call stream->put() directly.
	* libc/stdio/fputs_p.c: Ditto.
	* libc/stdio/puts.c: Ditto.
	* libc/stdio/puts_p.c: Ditto.

2002-12-24  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libm/fplib/readme.atan2: remove now unrelated file.

2002-12-23  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/iom163.h: UBRRH -> UBRRHI.

2002-12-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libc/stdio/fputs.c: New file.
	* libc/stdio/fputs_p.c: Ditto.
	* libc/stdio/putc.S: Ditto.
	* libc/stdio/putchar.c: Ditto.
	* libc/stdio/puts.c: Ditto.
	* libc/stdio/puts_p.c: Ditto.
	* include/stdio.h: document fputs*(), putc*(), puts*().
	* libc/stdio/Makefile.am: include new files.

2002-12-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libm/fplib/atan.S: completely rewritten, much better accuracy.
	* libm/fplib/atan2.S: completely rewritten;
		both contributed by Reiner Patommel.

2002-12-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libm/fplib/fplib.inc: add FPPUSH, FPPOP, FPCLR, and FPSWAP
		macros; contributed by Reiner Patommel.

2002-12-18  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
